--- a/estilos.css
+++ b/estilos.css
@@ -165,7 +165,7 @@ i.fa-linkedin:hover,
   right: 50%;
 }
 .indice [data-tooltip]:before {
-  margin-bottom: 0;
+  margin-top: -8px;
   margin-right: 10px;
 }
 .indice [data-tooltip]:hover:before,
@@ -188,10 +188,11 @@ li.indice-item {
   color: #2C2C2C;
 }
 li.indice-item a.active-bullet {
-  margin: 0 16px -3px 10px;
-  background: rgba(255, 255, 255, .1);
+  margin: 0 18px 0 10px;
+  background: #00AEEF;
   border-radius: 50%;
-  border: 4px solid #2C2C2C;
+  width: 14px;
+  height: 14px;
 }
 li.indice-item a {
   content: " ";
@@ -206,9 +207,9 @@ li.indice-item a {
 li.indice-item a:hover {
   background: #00AEEF;
 }
-li.indice-item a.active-bullet:hover {
+/*li.indice-item a.active-bullet:hover {
   background: rgba(255, 255, 255, .1);
-}
+}*/
 
 #home [data-tooltip]:before,
 [data-tooltip]:after {
@@ -429,12 +430,12 @@ p.p-student {
 }
 .mouse-scroll {
   width: 4px;
-  height: 4px;
+  height: 2px;
   border-radius: 2px;
   background: #2C2C2C;
   position: relative;
   top: 10px;
-  left: 13px;
+  left: 13.5px;
   -webkit-animation: scrolls 1.3s ease-out infinite;
 }
 @-webkit-keyframes scrolls{
@@ -605,15 +606,18 @@ margin: 0;
   width: calc(50% - 20px);
   min-height: 100%;
   margin: 20px 0 20px 20px;
+  border-radius: 4px;
   display: inline-block;
+  background: url('img/map.png') no-repeat center center;
+  background-size: cover;
   opacity: 1;
   transition: opacity 200ms ease-in-out;
 }
-#map iframe {
+/*#map img {
   width: 100%;
   height: 100%;
   border-radius: 4px;
-}
+}*/
 .contact-textbox {
   width: calc(50% - (50% - 585px));
   margin-right: calc(50% - 585px);
