--- a/estilos.css
+++ b/estilos.css
@@ -608,16 +608,12 @@ margin: 0;
   margin: 20px 0 20px 20px;
   border-radius: 4px;
   display: inline-block;
-  background: url('img/map.png') no-repeat center center;
+  background: url('img/map.PNG') no-repeat center center;
   background-size: cover;
   opacity: 1;
   transition: opacity 200ms ease-in-out;
 }
-/*#map img {
-  width: 100%;
-  height: 100%;
-  border-radius: 4px;
-}*/
+
 .contact-textbox {
   width: calc(50% - (50% - 585px));
   margin-right: calc(50% - 585px);
