--- a/estilos.css
+++ b/estilos.css
@@ -477,10 +477,10 @@ p.p-student {
   height: 640px;
   display: inline-block;
   /*background-color: pink;*/
-  background: url("img/me.jpg") no-repeat center;
+  background: url("img/me-bn.jpg") no-repeat center;
   background-size:cover;
   border-radius: 4px;
-  opacity: 1;
+  opacity: .4;
   transition: opacity 200ms ease-in-out;
 }
 .about-photo:hover {
